--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="crime_date">Crime Date</string>
     <string name="update_time_label">Update Time</string>
     <string name="new_crime">New Crime</string>
+    <string name="delete_crime">Delete Crime</string>
 
 
 </resources>
